Found a way to stop the page getting offset when a scrollbar appears.

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@ body {
   padding: 0;
   font-family: sans-serif;
   background: url("images/forest-herbs-blue-background.svg");
+  /* Thrown in to stop a scrollbar from offsetting content */
+  width: calc(100vw - 34px); 
 }
 
 .myFace {
